--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "cheerio": "^1.0.0-rc.3",
     "core-js": "^3.6.4",
     "express": "^4.17.1",
-    "vue": "^2.6.11"
+    "javascript-time-ago": "^2.0.7",
+    "snoowrap": "^1.21.0",
+    "vue": "^2.6.11",
+    "vue-fragment": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
